<resources>
    <string name="app_name">Tasks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_task1">Task 1</string>
    <string name="menu_task2">Task 2</string>
    <string name="menu_task3">Task 3</string>
    <string name="menu_task4">Task 4</string>
    <string name="menu_weather">Weather</string>
    <string name="alert_text">Nice Alert right?</string>
    <string name="api_key">13414ede1d449f77f579efec4a536914</string>

</resources>