<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/number_one"
            android:title="@string/menu_task1" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/number_two"
            android:title="@string/menu_task2" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/number_three"
            android:title="@string/menu_task3" />

        <item
            android:id="@+id/nav_task4"
            android:icon="@drawable/number_four"
            android:title="@string/menu_task4" />

        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/number_nine"
            android:title="@string/menu_weather" />
    </group>
</menu>